@@ -1,5 +1,7 @@
 2005-04-27  Sam Steingold  <sds@gnu.org>
 
+	* modules/syscalls/calls.c (POSIX::MKNOD): when mknod() is not
+	present, use mkfifo(), mkdir(), and creat()
 	* modules/syscalls/configure.in (mkfifo, mkdir, creat): check
 
 2005-04-27  Sam Steingold  <sds@gnu.org>
